--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,12 +4,14 @@
 @string{aps = {American Physical Society,}}
 
 @book{einstein1956investigations,
-  bibtex_show={false},
   title={Fundamental of visualization with TableauFundamental of visualization with Tableau},
   author={UC DAVIS},
-  year={July, 2023},
+  year={2023},
+  month = {July},
   publisher={Coursera},
-  url = {https://www.coursera.org/account/accomplishments/certificate/9KM839CN2X2X}
+  url = {https://www.coursera.org/account/accomplishments/certificate/9KM839CN2X2X},
+  html={https://www.coursera.org/account/accomplishments/certificate/9KM839CN2X2X},
+  preview={coursera_logo.png}
 }
 
 
