--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
+@book{
   title={Fundamental of visualization with TableauFundamental of visualization with Tableau},
   author={UC DAVIS},
   year={2023},
@@ -14,5 +14,14 @@
   preview={coursera_logo.png}
 }
 
-
+@book{
+  title={Foundations of Digital Marketing and E-commerceFoundations of Digital Marketing and E-commerce},
+  author={Google},
+  year={2023},
+  month = {April},
+  publisher={Coursera},
+  url = {https://www.coursera.org/account/accomplishments/certificate/NQFMWHQHZ92L},
+  html={https://www.coursera.org/account/accomplishments/certificate/NQFMWHQHZ92L},
+  preview={coursera_logo.png}
+}
 
