--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{
+@book{tableu1,
   title={Fundamental of visualization with TableauFundamental of visualization with Tableau},
   author={UC DAVIS},
   year={2023},
@@ -14,7 +14,7 @@
   preview={coursera_logo.png}
 }
 
-@book{
+@book{digitalMarketing1,
   title={Foundations of Digital Marketing and E-commerceFoundations of Digital Marketing and E-commerce},
   author={Google},
   year={2023},
