--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,3 +25,36 @@
   preview={coursera_logo.png}
 }
 
+@book{speakPro,
+  title={Speak English Professionally: In Person, Online & On the Phone},
+  author={Georgia Institute of technology},
+  year={2022},
+  month = {August},
+  publisher={Coursera},
+  url = {https://www.coursera.org/account/accomplishments/certificate/UHPYPXBAABZC},
+  html={https://www.coursera.org/account/accomplishments/certificate/UHPYPXBAABZC},
+  preview={coursera_logo.png}
+}
+
+@book{speakPro,
+  title={Speak English Professionally: In Person, Online & On the Phone},
+  author={Georgia Institute of technology},
+  year={2022},
+  month = {August},
+  publisher={Coursera},
+  url = {https://www.coursera.org/account/accomplishments/certificate/UHPYPXBAABZC},
+  html={https://www.coursera.org/account/accomplishments/certificate/UHPYPXBAABZC},
+  preview={coursera_logo.png}
+}
+
+@book{writePro,
+  title={Write Professional Emails in English},
+  author={Georgia Institute of technology},
+  year={2022},
+  month = {August},
+  publisher={Coursera},
+  url = {https://www.coursera.org/account/accomplishments/certificate/4G9Q7MEDAEZ7},
+  html={https://www.coursera.org/account/accomplishments/certificate/4G9Q7MEDAEZ7},
+  preview={coursera_logo.png}
+}
+
