--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@
 
 @book{speakPro,
   title={Speak English Professionally: In Person, Online & On the Phone},
-  author={Georgia Institute of technology},
+  author={Georgia Institute of Technology},
   year={2022},
   month = {August},
   publisher={Coursera},
@@ -39,7 +39,7 @@
 
 @book{writePro,
   title={Write Professional Emails in English},
-  author={Georgia Institute of technology},
+  author={Georgia Institute of Technology},
   year={2022},
   month = {August},
   publisher={Coursera},
